More improvements to GraphWidget and now alphaHandleY syncs with alpha value of AlphaSlider